<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_logo"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:textAlignment="center"
            android:layout_below="@+id/img_logo"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi"
            android:id="@+id/tvSilahkan"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_username"
            android:id="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSilahkan"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:inputType="text" />

        <EditText
            android:textAlignment="center"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />

        <Button
            app:backgroundTint="@null"
            android:background="@drawable/btn_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/btnLogin"
            android:text="@string/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>